# electronic_health_records

./: .gitignore  README.md  pyproject.toml
work/: get_data.py
work/patient_treatment/: README.md  eda.ipynb  eda.md
work/patient_treatment/models/: base.ipynb  helpers.py
work/patient_treatment/models/base/:       Decision Tree.joblib       Neural Network.joblib    Gradient Boosting.joblib  Decision Tree.joblib  Gradient Boosting.joblib  Logistic Regression.joblib  Neural Network.joblib
work/patient_treatment/models/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
work/patient_treatment/models/catboost_info/learn/: events.out.tfevents
